Form elements added to create page

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>Employee list</h1>
     <ul>
         <li>Employee1</li>
         <li>Employee2</li>
