--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -14,5 +14,29 @@
         <li>Employee5</li>
         <li>Employee6</li>
     </ul>
+    <h1>All Projects</h1>
+
+
+    <p th:unless="${projects} and ${projects.size()}">No Projects</p>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Project Name</th>
+            <th>Project Manager</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+        </tr>
+        </thead>
+        <tr th:each="project : ${projects}">
+            <td th:text="${project.projectId}"></td>
+            <td th:text="${project.projectName}"></td>
+            <td th:text="${project.projectManager}"></td>
+            <td th:text="${project.startDate}"></td>
+            <td th:text="${project.endDate}"></td>
+        </tr>
+
+    </table>
 </body>
 </html>
