--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
     <h1>Employee list</h1>
     <ul>
@@ -19,8 +16,8 @@
 
     <p th:unless="${projects} and ${projects.size()}">No Projects</p>
 
-    <table>
-        <thead>
+    <table class="table">
+        <thead class="thead-dark">
         <tr>
             <th>Id</th>
             <th>Project Name</th>
