--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,6 +7,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<nav th:fragment="adminnavigation">
+    <ul class="nav">
+        <li class="nav-item"><p>Bandhan Consultancy Services</p></li>
+        <li class="nav-item"><a class="nav-link" href = "/admin">Employees</a></li>
+        <li class="nav-item"><a class="nav-link" href = "/admin/create">Add Projects</a></li>
+    </ul>
+</nav>
 </body>
 </html>
