employee landing page and edit form

--- a/src/main/resources/templates/admin/landingpage.html
+++ b/src/main/resources/templates/admin/landingpage.html
@@ -3,8 +3,9 @@
 <head th:replace="fragments :: head"></head>
 <body>
 <nav th:replace="fragments :: adminnavigation"></nav>
+<div class="p-3 mb-2 bg-info text-black">
 <h1>Employee list</h1>
-<ul class="list-group list-group-flush">
+<ul class="list-group">
     <li class="list-group-item">Employee1</li>
     <li class="list-group-item">Employee2</li>
     <li class="list-group-item">Employee3</li>
@@ -12,6 +13,6 @@
     <li class="list-group-item">Employee5</li>
     <li class="list-group-item">Employee6</li>
 </ul>
-
+</div>
 </body>
 </html>
