--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Employee Management System</title>
+    <link rel="stylesheet" href="/styles.css"/>
     <link  rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav th:fragment="adminnavigation">
+<nav th:fragment="adminnavigation"  class="navbar navbar-dark bg-dark">
     <ul class="nav">
-        <li class="nav-item"><p>Bandhan Consultancy Services</p></li>
-        <li class="nav-item"><a class="nav-link" href = "/admin">Employees</a></li>
-        <li class="nav-item"><a class="nav-link" href = "/admin/create">Add Projects</a></li>
+            <li><span class="navbar-text">
+            Bandhan Consultancy Services
+            </span></li>
+            <li class="nav-item"><a class="nav-link" href = "/admin">Employees</a></li>
+            <li class="nav-item"><a class="nav-link" href = "/admin/create">Add Projects</a></li>
+    </ul>
+</nav>
+<nav th:fragment="employeenavigation"  class="navbar navbar-dark bg-dark">
+    <ul class="nav">
+        <li><span class="navbar-text">
+            Bandhan Consultancy Services
+            </span></li>
+        <li class="nav-item"><a class="nav-link" href = "/employee">Employee Details</a></li>
+        <li class="nav-item"><a class="nav-link" href = "/employee/edit">Add Personal Info</a></li>
     </ul>
 </nav>
 </body>
