Admin User model added

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,7 +23,7 @@
             Bandhan Consultancy Services
             </span></li>
         <li class="nav-item"><a class="nav-link" href = "/employee">Employee Details</a></li>
-        <li class="nav-item"><a class="nav-link" href = "/employee/edit">Add Personal Info</a></li>
+        <li class="nav-item"><a class="nav-link" href = "/employee/edit">Edit Personal Info</a></li>
     </ul>
 </nav>
 </body>
