--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,6 +1,31 @@
-body {
-  background-color: #92a8d1;
-}
 .error {
 color : red;
+}
+body {
+  margin: 0;
+  background-color: gray;
+}
+
+.center {
+  line-height: 50px;
+  border: 3px solid lightblue;
+  text-align: center;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  margin-right: 500px;
+  margin-left: 500px;
+}
+
+.center p {
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.row {
+    margin: 100px;
+}
+
+.col {
+    margin-left : 0;
 }
