--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,23 +8,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav th:fragment="adminnavigation"  class="navbar navbar-dark bg-dark">
-    <ul class="nav">
-            <li><span class="navbar-text">
-            Bandhan Consultancy Services
-            </span></li>
-            <li class="nav-item"><a class="nav-link" href = "/admin">Employees</a></li>
-            <li class="nav-item"><a class="nav-link" href = "/admin/create">Add Projects</a></li>
-    </ul>
-</nav>
-<nav th:fragment="employeenavigation"  class="navbar navbar-dark bg-dark">
-    <ul class="nav">
-        <li><span class="navbar-text">
-            Bandhan Consultancy Services
-            </span></li>
-        <li class="nav-item"><a class="nav-link" href = "/employee">Employee Details</a></li>
-        <li class="nav-item"><a class="nav-link" href = "/employee/edit">Edit Personal Info</a></li>
-    </ul>
-</nav>
+    <nav th:fragment="navigation"  class="navbar navbar-dark bg-dark">
+               <span class="navbar-text">
+                Bandhan Consultancy Services
+                </span>
+    </nav>
+
+    <div th:fragment="employeesidebar">
+        <a class="nav-link" href = "/employee">Employee Details</a>
+        <a class="nav-link" href = "/employee/edit">Edit Personal Info</a>
+    </div>
+
+    <div th:fragment="index" class= "center">
+        <a class="nav-link" href = "/login">Log In</a>
+        <a class="nav-link" href = "/register">Register</a>
+    </div>
+
+    <div th:fragment="adminsidebar">
+        <a class="nav-link" href = "/admin">Employees list</a>
+        <a class="nav-link" href = "/admin/create">Add Project</a>
+    </div>
 </body>
 </html>
