--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,26 +3,45 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<header th:replace="fragments :: header"></header>
+<div class="container">
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col-6" style="margin:100px">
+            <div class="p-3 mb-2 bg-light text-black">
+            <h1>Login Form</h1>
 
-<form method="post">
-    <div class="form-group">
-        <label th:for="username">Username
-            <input class="form-control" th:field="${loginFormDTO.username}">
-        </label>
-        <p class="error" th:errors="${loginFormDTO.username}"></p>
+            <form method="post">
+                <div class="form-group">
+                    <label th:for="username">Username
+                        <input class="form-control" th:field="${loginFormDTO.username}">
+                    </label>
+                    <p class="error" th:errors="${loginFormDTO.username}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Password
+                        <input class="form-control" th:field="${loginFormDTO.password}" type="password">
+                    </label>
+                    <p class="error" th:errors="${loginFormDTO.password}"></p>
+                </div>
+                <div class="form-group">
+                    <label> Role
+                        <input class="form-control" th:field="${loginFormDTO.role}" type="text">
+                    </label>
+                </div>
+
+                <input type="submit" class="btn btn-primary" value="Log In" />
+            </form>
+
+            <p>Don't have an account? <a href="/register">Register for one.</a></p>
+            </div>
+        </div>
+        <div class="col">
+        </div>
     </div>
-    <div class="form-group">
-        <label>Password
-            <input class="form-control" th:field="${loginFormDTO.password}" type="password">
-        </label>
-        <p class="error" th:errors="${loginFormDTO.password}"></p>
-    </div>
+</div>
 
-    <input type="submit" class="btn btn-primary" value="Log In" />
-</form>
 
-<p>Don't have an account? <a href="/register">Register for one.</a></p>
 
 </body>
 </html>
