--- a/src/main/resources/templates/admin/create.html
+++ b/src/main/resources/templates/admin/create.html
@@ -2,31 +2,42 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
-<nav th:replace="fragments :: adminnavigation"></nav>
-    <h1>Create Event</h1>
-    <form action="/admin/create" method="post">
-        <p th:text="${errorMsg}" style="color:red;"></p>
-        <div class="form-group">
-            <label>Project Name:<input type="text" th:field=${employeeProject.projectName} class="form-control"/></label>
-            <p class="error" th:errors="${employeeProject.projectName}"></p>
-        </div>
-        <div class="form-group">
-            <label>Project Manager:<input type="text" th:field=${employeeProject.projectManager} class="form-control"/></label>
-            <p class="error" th:errors="${employeeProject.projectManager}"></p>
-        </div>
-        <div class="form-group">
-            <label>Start Date:<input type="date" th:field=${employeeProject.startDate} class="form-control"/></label>
-            <p class="error" th:errors="${employeeProject.startDate}"></p>
-        </div>
-        <div class="form-group">
-            <label>End Date:<input type="date" th:field=${employeeProject.endDate} class="form-control"/></label>
-            <p class="error" th:errors="${employeeProject.endDate}"></p>
-        </div>
-        <div>
-            <input type="submit" value="Add Project" class="btn btn-success"/>
-        </div>
+<nav th:replace="fragments :: adminNavigation"></nav>
 
-    </form>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="p-3 mb-2 bg-light text-black">
+                <h1>Create Event</h1>
+                <form action="/admin/create" method="post">
+                    <p th:text="${errorMsg}" style="color:red;"></p>
+                    <div class="form-group">
+                        <label>Project Name:<input type="text" th:field=${employeeProject.projectName} class="form-control"/></label>
+                        <p class="error" th:errors="${employeeProject.projectName}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Project Manager:<input type="text" th:field=${employeeProject.projectManager} class="form-control"/></label>
+                        <p class="error" th:errors="${employeeProject.projectManager}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Start Date:<input type="date" th:field=${employeeProject.startDate} class="form-control"/></label>
+                        <p class="error" th:errors="${employeeProject.startDate}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>End Date:<input type="date" th:field=${employeeProject.endDate} class="form-control"/></label>
+                        <p class="error" th:errors="${employeeProject.endDate}"></p>
+                    </div>
+                    <div>
+                        <input type="submit" value="Add Project" class="btn btn-success"/>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+        <div class="col">
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
