--- a/src/main/resources/templates/admin/landingPage.html
+++ b/src/main/resources/templates/admin/landingPage.html
@@ -2,14 +2,9 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="fragments :: adminNavigation"></nav>
 <div class="container">
     <div class="row">
-        <div class="col">
-            <div class="p-3 mb-2 bg-light text-black">
-            <nav th:replace="fragments :: adminsidebar"></nav>
-            </div>
-        </div>
         <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
                 <h1>Employee list</h1>
