--- a/src/main/resources/templates/employee/landingPage.html
+++ b/src/main/resources/templates/employee/landingPage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
-    <nav th:replace="fragments :: navigation"></nav>
+    <nav th:replace="fragments :: employeeNavigation"></nav>
     <div class="container">
         <div class="row">
             <div class="col">
