--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-<div class="container">
-    <div class="row">
-        <div class="col">
-        </div>
-        <div class="col-6" style="margin:100px">
+<body>
+    <div class="container">
+        <div class="row">
+        <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
             <h1>Registration Form</h1>
             <form action="/register" method="post">
@@ -39,9 +37,10 @@
                 </form>
             </div>
         </div>
-        <div class="col">
+            <div class="col">
+            </div>
         </div>
     </div>
-</div>
+
 </body>
 </html>
