Employee personal information in registration form

--- a/src/main/resources/templates/employee/landingPage.html
+++ b/src/main/resources/templates/employee/landingPage.html
@@ -5,9 +5,7 @@
     <nav th:replace="fragments :: employeeNavigation"></nav>
     <div class="container">
         <div class="row">
-            <div class="col">
-            </div>
-            <div class="col-6" style="margin:100px">
+            <div class="col-6">
                 <div class="p-3 mb-2 bg-light text-black">
                 <h1>My Details</h1>
                 <table class="table">
