--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -29,6 +29,7 @@
             </div>
             <div id="employeelinks">
                 <a href="/employee">Employee Details</a>
+                <a href="/employee/create">Personal Info</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
