--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -23,7 +23,7 @@ body {
   display: grid;
   min-height: 100px;
   grid-auto-flow: column;
-  background-color: #fcfcfc;
+  background-color: lightgray;
   grid-gap: 1.5em;
   padding: 0 40px;
   -webkit-box-shadow: -1px 4px 5px 0px rgba(209, 205, 209, 1);
