--- a/src/main/resources/templates/employee/create.html
+++ b/src/main/resources/templates/employee/create.html
@@ -3,34 +3,47 @@
 <head th:replace="fragments :: head"></head>
 <body>
 <nav th:replace="fragments :: employeeNavigation"></nav>
-<h1>Create details</h1>
-<form action="/employee/create" method="post">
-    <p th:text="${errorMsg}" style="color:red;"></p>
-    <div class="form-group">
-        <label>First Name:<input type="text" th:field=${employee.firstName} class="form-control"/></label>
-        <p class="error" th:errors="${employee.firstName}"></p>
-    </div>
-    <div class="form-group">
-        <label>Last Name:<input type="text" th:field=${employee.lastName} class="form-control"/></label>
-        <p class="error" th:errors="${employee.lastName}"></p>
-    </div>
-    <div class="form-group">
-        <label>Email:<input type="text" th:field=${employee.contactEmail} class="form-control"/></label>
-        <p class="error" th:errors="${employee.contactEmail}"></p>
-    </div>
-    <div class="form-group">
-        <label>Address:<input type="text" th:field=${employee.address} class="form-control"/></label>
-        <p class="error" th:errors="${employee.address}"></p>
-    </div>
-    <div class="form-group">
-        <label>Phone Number:<input type="text" th:field=${employee.phoneNumber} class="form-control"/></label>
-        <p class="error" th:errors="${employee.phoneNumber}"></p>
-    </div>
-    <div>
-        <input type="submit" value="Create" class="btn btn-success"/>
-    </div>
 
-</form>
+
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="p-3 mb-2 bg-light text-black">
+                <h1>Create details</h1>
+                <form action="/employee/create" method="post">
+                    <p th:text="${errorMsg}" style="color:red;"></p>
+                    <div class="form-group">
+                        <label>First Name:<input type="text" th:field=${employee.firstName} class="form-control"/></label>
+                        <p class="error" th:errors="${employee.firstName}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Last Name:<input type="text" th:field=${employee.lastName} class="form-control"/></label>
+                        <p class="error" th:errors="${employee.lastName}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Email:<input type="text" th:field=${employee.contactEmail} class="form-control"/></label>
+                        <p class="error" th:errors="${employee.contactEmail}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Address:<input type="text" th:field=${employee.address} class="form-control"/></label>
+                        <p class="error" th:errors="${employee.address}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Phone Number:<input type="text" th:field=${employee.phoneNumber} class="form-control"/></label>
+                        <p class="error" th:errors="${employee.phoneNumber}"></p>
+                    </div>
+                    <div>
+                        <input type="submit" value="Create" class="btn btn-success"/>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+        <div class="col">
+
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
