--- a/src/main/resources/templates/admin/landingPage.html
+++ b/src/main/resources/templates/admin/landingPage.html
@@ -8,18 +8,12 @@
         <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
                 <h1>Employee list</h1>
-                <ul class="list-group">
-                    <li class="list-group-item">Employee1</li>
-                    <li class="list-group-item">Employee2</li>
-                    <li class="list-group-item">Employee3</li>
-                    <li class="list-group-item">Employee4</li>
-                    <li class="list-group-item">Employee5</li>
-                    <li class="list-group-item">Employee6</li>
+                <ul class="list-group"  th:each="employee : ${employees}">
+                    <li class="list-group-item" th:if="${employee.getRole().equals('employee')}" th:text="${employee.getUsername()}">Employee1</li>
                 </ul>
             </div>
         </div>
         <div class="col">
-
         </div>
     </div>
 </div>
