--- a/src/main/resources/templates/admin/landingPage.html
+++ b/src/main/resources/templates/admin/landingPage.html
@@ -9,7 +9,7 @@
             <div class="p-3 mb-2 bg-light text-black">
                 <h1>Employee list</h1>
                 <ul class="list-group"  th:each="employee : ${employees}">
-                    <li class="list-group-item" th:if="${employee.getRole().equals('employee')}" th:text="${employee.getUsername()}">Employee1</li>
+                    <li class="list-group-item" th:if="${employee.getRole().equals('employee')}"><a href="/admin"  th:text="${employee.getUsername()}"></a></li>
                 </ul>
             </div>
         </div>
