--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,6 +17,7 @@
             <div id="links">
                 <a href="/admin">Employee List</a>
                 <a href="/admin/create">Add Project</a>
+                <a href="/admin/project">Projects</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
@@ -28,8 +29,9 @@
                 <div class="logo">Ba<span>ndhan</span> Consultancy Services</div>
             </div>
             <div id="employeelinks">
-                <a href="/employee">Employee Details</a>
-                <a href="/employee/create">Personal Info</a>
+                <a href="/employee">Personal Info</a>
+                <a href="/employee/create">Add</a>
+                <a href="/employee/edit">Edit</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
