--- a/src/main/resources/templates/employee/edit.html
+++ b/src/main/resources/templates/employee/edit.html
@@ -9,26 +9,26 @@
             <div class="col-6">
                 <div class="p-3 mb-2 bg-light text-black">
                     <h1>Edit details</h1>
-                    <form action="/admin/edit" method="post">
+                    <form action="/admin/edit" method="post" th:each="value : ${values}">
                         <p th:text="${errorMsg}" style="color:red;"></p>
                         <div class="form-group">
-                            <label>First Name:<input type="text" th:field=${employee.firstName} class="form-control"/></label>
+                            <label>First Name:<input type="text" th:field=${employee.firstName} th:value=${value.firstName} class="form-control"/></label>
                             <p class="error" th:errors="${employee.firstName}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Last Name:<input type="text" th:field=${employee.lastName} class="form-control"/></label>
+                            <label>Last Name:<input type="text" th:field=${employee.lastName} th:value=${value.lastName} class="form-control"/></label>
                             <p class="error" th:errors="${employee.lastName}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Email:<input type="text" th:field=${employee.email} class="form-control"/></label>
-                            <p class="error" th:errors="${employee.email}"></p>
+                            <label>Email:<input type="text" th:field=${employee.contactEmail} th:value=${value.contactEmail} class="form-control"/></label>
+                            <p class="error" th:errors="${employee.contactEmail}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Address:<input type="text" th:field=${employee.address} class="form-control"/></label>
+                            <label>Address:<input type="text" th:field=${employee.address} th:value=${value.address} class="form-control"/></label>
                             <p class="error" th:errors="${employee.address}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Phone Number:<input type="text" th:field=${employee.phoneNumber} class="form-control"/></label>
+                            <label>Phone Number:<input type="text" th:field=${employee.phoneNumber} th:value=${value.phoneNumber} class="form-control"/></label>
                             <p class="error" th:errors="${employee.phoneNumber}"></p>
                         </div>
                         <div>
