onetoone relation to user and userdetails classes. Employee class changed to userdetails

--- a/src/main/resources/templates/admin/projects.html
+++ b/src/main/resources/templates/admin/projects.html
@@ -22,7 +22,7 @@
                     </tr>
                     </thead>
                     <tr th:each="project : ${projects}">
-                        <td th:text="${project.projectId}"></td>
+                        <td th:text="${project.id}"></td>
                         <td th:text="${project.projectName}"></td>
                         <td th:text="${project.projectManager}"></td>
                         <td th:text="${project.startDate}"></td>
