--- a/src/main/resources/templates/admin/assignProject.html
+++ b/src/main/resources/templates/admin/assignProject.html
@@ -9,17 +9,18 @@
         <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
                 <form action="/admin/employee" method="post">
+                    <input type="hidden"  name="id" th:value="${employee.id}" class="form-control"/>
+
                     <div class="form-group">
-                        <label>Id<input type="text"  name="id" class="form-control"/></label>
+                        <label>Name<input type="text"  name="username" th:value="${employee.username}" class="form-control"/></label>
                     </div>
                     <div class="form-group">
-                        <label>Name<input type="text"  name="username" class="form-control"/></label>
-                    </div>
-                    <div class="form-group">
-                        <label> Projects
+                        <label> Project
                             <select name="project">
-                                <option value="admin">Admin</option>
-                                <option value="employee">Employee</option>
+                                <option th:each="project : ${projects}"
+                                        th:value="${project.id}"
+                                        th:text="${project.projectName}"
+                                ></option>
                             </select>
                         </label>
                     </div>
