--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -33,6 +33,26 @@
                         </select>
                     </label>
                 </div>
+                <div class="form-group">
+                    <label>First Name:<input type="text" th:field=${userDetails.firstName} class="form-control"/></label>
+                    <p class="error" th:errors="${userDetails.firstName}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Last Name:<input type="text" th:field=${userDetails.lastName} class="form-control"/></label>
+                    <p class="error" th:errors="${userDetails.lastName}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Email:<input type="text" th:field=${userDetails.contactEmail} class="form-control"/></label>
+                    <p class="error" th:errors="${userDetails.contactEmail}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Address:<input type="text" th:field=${userDetails.address} class="form-control"/></label>
+                    <p class="error" th:errors="${userDetails.address}"></p>
+                </div>
+                <div class="form-group">
+                    <label>Phone Number:<input type="text" th:field=${userDetails.phoneNumber} class="form-control"/></label>
+                    <p class="error" th:errors="${userDetails.phoneNumber}"></p>
+                </div>
                 <input type="submit" class="btn btn-primary" value="Register" />
                 </form>
             </div>
