--- a/src/main/resources/templates/employee/landingPage.html
+++ b/src/main/resources/templates/employee/landingPage.html
@@ -8,31 +8,31 @@
             <div class="col-6">
                 <div class="p-3 mb-2 bg-light text-black">
                 <h1>Personal Information</h1>
-                <table class="table">
-                    <thead class="thead-dark" th:each="detail : ${details}">
+                <table class="table" th:each="detail : ${details}">
+                    <thead class="thead-dark">
                     <tr>
                         <td>Id</td>
-                        <td th:text="${detail.id}"></td>
+                        <td th:text="${detail.userDetails.id}"></td>
                     </tr>
                     <tr>
                         <td>FirstName</td>
-                        <td th:text="${detail.firstName}"></td>
+                        <td th:text="${detail.userDetails.firstName}"></td>
                     </tr>
                     <tr>
                         <td>LastName</td>
-                        <td th:text="${detail.lastName}"></td>
+                        <td th:text="${detail.userDetails.lastName}"></td>
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td th:text="${detail.contactEmail}"></td>
+                        <td th:text="${detail.userDetails.contactEmail}"></td>
                     </tr>
                     <tr>
                         <td>Address</td>
-                        <td th:text="${detail.address}"></td>
+                        <td th:text="${detail.userDetails.address}"></td>
                     </tr>
                     <tr>
                         <td>Phone no</td>
-                        <td th:text="${detail.phoneNumber}"></td>
+                        <td th:text="${detail.userDetails.phoneNumber}"></td>
                     </tr>
                     </thead>
                 </table>
