--- a/src/main/resources/templates/employee/landingPage.html
+++ b/src/main/resources/templates/employee/landingPage.html
@@ -6,9 +6,10 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <div class="p-3 mb-2 bg-light text-black">
+                <div class="p-3 mb-2 bg-light text-black"  th:each="detail : ${details}">
+                    <a th:href="@{/employee/edit/{id}(id=${detail.username})}">Edit</a>
                 <h1>Personal Information</h1>
-                <table class="table" th:each="detail : ${details}">
+                <table class="table">
                     <thead class="thead-dark">
                     <tr>
                         <td>Id</td>
