--- a/src/main/resources/templates/admin/assignProject.html
+++ b/src/main/resources/templates/admin/assignProject.html
@@ -11,23 +11,29 @@
                 <form action="/admin/employee" method="post">
                     <input type="hidden"  name="id" th:value="${employee.id}" class="form-control"/>
 
-                    <div class="form-group">
-                        <label>Name<input type="text"  name="username" th:value="${employee.username}" class="form-control"/></label>
-                    </div>
-                    <div class="form-group">
-                        <label> Project
-                            <select name="project">
+                    <table class="table">
+                        <tr>
+                            <th>Employee Id</th>
+                            <td th:text="${employee.userDetails.id}"></td>
+                        </tr>
+                        <tr>
+                            <th>Employee Name</th>
+                            <td th:text="${employee.userDetails.firstName}"></td>
+                        </tr>
+
+                        <tr>
+                        <th> Project</th>
+                            <td><select name="projectId">
                                 <option th:each="project : ${projects}"
                                         th:value="${project.id}"
                                         th:text="${project.projectName}"
                                 ></option>
-                            </select>
-                        </label>
-                    </div>
-                    <div>
-                        <input type="submit" value="Add" class="btn btn-success"/>
-                    </div>
-
+                            </select></td>
+                        </tr>
+                    <tr>
+                        <td><input type="submit" value="Add" class="btn btn-success"/></td>
+                    </tr>
+                    </table>
                 </form>
             </div>
         </div>
