--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,6 +18,7 @@
                 <a href="/admin">Employee List</a>
                 <a href="/admin/create">Add Project</a>
                 <a href="/admin/project">Projects</a>
+                <a href="/admin/assignProject">Assign Project</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
