--- a/src/main/resources/templates/admin/landingPage.html
+++ b/src/main/resources/templates/admin/landingPage.html
@@ -9,7 +9,7 @@
             <div class="p-3 mb-2 bg-light text-black">
                 <h1>Employee list</h1>
                 <ul class="list-group"  th:each="employee : ${employees}">
-                    <li class="list-group-item" th:if="${employee.role.equals('employee')}"><a th:href="@{'/admin/employee/' + ${employee.username}}"  th:text="${employee.username}"></a></li>
+                    <li class="list-group-item" th:if="${employee.role.equals('employee')}"><a th:href="@{'/admin/view/' + ${employee.username}}"  th:text="${employee.username}"></a></li>
                 </ul>
             </div>
         </div>
