--- a/src/main/resources/templates/employee/edit.html
+++ b/src/main/resources/templates/employee/edit.html
@@ -11,25 +11,25 @@
                     <h1>Edit details</h1>
                     <form action="/employee/edit" method="post">
                         <p th:text="${errorMsg}" style="color:red;"></p>
-                        <input type="hidden" th:value="${employee.username}" name="username" />
+                        <input type="hidden" th:value="${employee.userDetails.id}" name="id" />
                         <div class="form-group">
-                            <label>First Name:<input type="text" th:field=${employee.userDetails.firstName} th:value=${employee.userDetails.firstName} class="form-control"/></label>
+                            <label>First Name:<input type="text" name="firstName"  th:value=${employee.userDetails.firstName} class="form-control"/></label>
                             <p class="error" th:errors="${employee.userDetails.firstName}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Last Name:<input type="text" th:field=${employee.userDetails.lastName} th:value=${employee.userDetails.lastName} class="form-control"/></label>
+                            <label>Last Name:<input type="text" name="lastName" th:value=${employee.userDetails.lastName} class="form-control"/></label>
                             <p class="error" th:errors="${employee.userDetails.lastName}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Email:<input type="text" th:field=${employee.userDetails.contactEmail} th:value=${employee.userDetails.contactEmail} class="form-control"/></label>
+                            <label>Email:<input type="text" name="contactEmail" th:value=${employee.userDetails.contactEmail} class="form-control"/></label>
                             <p class="error" th:errors="${employee.userDetails.contactEmail}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Address:<input type="text" th:field=${employee.userDetails.address} th:value=${employee.userDetails.address} class="form-control"/></label>
+                            <label>Address:<input type="text" name="address" th:value=${employee.userDetails.address} class="form-control"/></label>
                             <p class="error" th:errors="${employee.userDetails.address}"></p>
                         </div>
                         <div class="form-group">
-                            <label>Phone Number:<input type="text" th:field=${employee.userDetails.phoneNumber} th:value=${employee.userDetails.phoneNumber} class="form-control"/></label>
+                            <label>Phone Number:<input type="text" name="phoneNumber" th:value=${employee.userDetails.phoneNumber} class="form-control"/></label>
                             <p class="error" th:errors="${employee.userDetails.phoneNumber}"></p>
                         </div>
                         <div>
