link to remove employee from project and remove.html

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,6 +19,7 @@
                 <a href="/admin/create">Add Project</a>
                 <a href="/admin/project">Projects</a>
                 <a href="/admin/assignProject">Assign Project</a>
+                <a href="/admin/remove">Remove Employee</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
