--- a/src/main/resources/templates/admin/remove.html
+++ b/src/main/resources/templates/admin/remove.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
-            <form method="post" action="admin/remove">
+            <form method="post" >
 
                 <table class="table" th:each="employeeProject : ${employeeProjects}">
                     <tr>
