GetMapping for assignments

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,6 +31,8 @@
                 <div class="logo">Ba<span>ndhan</span> Consultancy Services</div>
             </div>
             <div id="employeelinks">
+                <a href="/employee">Personal Info</a>
+                <a href="/assignments">Assignments</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
