--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,7 +32,7 @@
             </div>
             <div id="employeelinks">
                 <a href="/employee">Personal Info</a>
-                <a href="/assignments">Assignments</a>
+                <a href="/employee/assignments">Assignments</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
