Getmapping method for performance

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,6 +20,7 @@
                 <a href="/admin/project">Projects</a>
                 <a href="/admin/assignProject">Assign Project</a>
                 <a href="/admin/remove">Remove Employee</a>
+                <a href="/admin/performance">Performance</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
