--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,7 +20,6 @@
                 <a href="/admin/project">Projects</a>
                 <a href="/admin/assignProject">Assign Project</a>
                 <a href="/admin/remove">Remove Employee</a>
-                <a href="/admin/performance">Performance</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
@@ -34,6 +33,7 @@
             <div id="employeelinks">
                 <a href="/employee">Personal Info</a>
                 <a href="/employee/assignments">Assignments</a>
+                <a href="/employee/view">View</a>
                 <a href="/logout">Logout</a>
             </div>
         </div>
