--- a/src/main/resources/templates/employee/editAssignments.html
+++ b/src/main/resources/templates/employee/editAssignments.html
@@ -9,7 +9,7 @@
         <div class="col-6">
             <div class="p-3 mb-2 bg-light text-black">
                 <form action="/employee/assignments" method="post">
-                    <div class="form-group">
+                    <div class="form-group" th:if="${assignments.user.id == user.id}">
                         <input type="hidden" th:value="${assignments.id}" name="id" />
                         <label>No of Assignments:
                             <Select name="noOfAssignments">
